// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Mark checkGrammar=false 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkGrammar=true 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkHighlight=false 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkHighlight=true 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkSpaces=false 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkSpaces=true 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark className="my-classname" 1`] = `
<mark
  className="uu5-bricks-mark my-classname"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark content="This is Content from ContentMixin" 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</mark>
`;

exports[`UU5.Bricks.Mark content=12345 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
>
  12345
</mark>
`;

exports[`UU5.Bricks.Mark controlled=false 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark controlled=true 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark default props 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark disabled=false 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark disabled=true 1`] = `
<mark
  className="uu5-bricks-mark uu5-common-disabled"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</mark>
`;

exports[`UU5.Bricks.Mark docKit examples UU5.Bricks.Mark should render without crash 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="marked"
  />
</mark>
`;

exports[`UU5.Bricks.Mark dynamic=false 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark dynamic=true 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark hidden=false 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark hidden=true 1`] = `
<mark
  className="uu5-bricks-mark uu5-common-hidden"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark id="myId" 1`] = `
<mark
  className="uu5-bricks-mark"
  id="myId"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark ignoreHTML=false 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark ignoreHTML=true 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark mainAttrs=undefined 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark name="myName" 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark noIndex=false 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark noIndex=true 1`] = `
<mark
  className="uu5-bricks-mark uu5-noindex"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark selected=false 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark selected=true 1`] = `
<mark
  className="uu5-bricks-mark uu5-common-selected"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark style="padding:8px; borderRadius: 2px" 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Mark style={"backgroundColor":"red","color":"blue"} 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Mark textCorrector=false 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark textCorrector=true 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark tooltip="My Tooltip" 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title="My Tooltip"
/>
`;
